# adaptix-admin

./: Dockerfile  POLYREPO_MIGRATION_CHARTER.md  README.md  REPO_OWNERSHIP.md  docker-compose.yml
backend/: .env.example  PRODUCTION_READINESS_AUDIT.md  README_ADMIN_EXTRACTION.txt  pyproject.toml  setup.py
backend/adaptix_admin_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/core_app/: __init__.py  config.py  main.py
backend/core_app/api/: __init__.py  adaptix_admin_router.py  adaptix_domain_router_common.py  ai_router.py  ai_router_extended.py  audit_router.py  audit_router_extended.py  auth_router.py  dependencies.py  feature_flag_router.py  feature_flag_router_extended.py  founder_security_router.py  health_router.py  personnel_router.py  personnel_router_extended.py
backend/core_app/core/: __init__.py  security.py
backend/core_app/models/: ai_policy.py  audit_extended.py  audit_log.py  feature_flag_extended.py  feature_flags.py  governance.py  personnel.py
backend/core_app/queries/: audit.py  feature_flags.py
backend/core_app/services/: __init__.py  admin_store.py  (+5 more)
backend/data/: access_recertifications.json  admin_accounts.json  ai_models.json  ai_policy_rules.json  feature_flags_extended.json  flag_audit.json  legal_holds.json  replay_requests.json  role_assignments.json
backend/tests/: conftest.py  fixtures.py  test_ai_router.py  test_audit_router.py  test_auth_router.py  test_feature_flag_router.py  test_founder_security_router.py  test_health.py  test_permission_boundaries.py  test_personnel_router.py  test_tenant_isolation.py
(+28 files in other folders)
