[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptix-admin-backend"
version = "1.0.0"
description = "Production-grade Adaptix Admin governance, feature-flag, audit, legal-hold, and AI policy system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "pydantic>=2.7,<3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8",
    "pytest-asyncio>=0.21,<1",
    "httpx>=0.25,<1",
    "pytest-cov>=4.1,<5"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core_app*"]